# icechunk

./: .codecov.yml  .codespellrc  .gitattributes  .gitignore  .mailmap  .octocov.python.yml  .octocov.yml  .pre-commit-config.yaml  .readthedocs.yaml  404.html  ;  AGENT.md  AI_USAGE_POLICY.md  CI_OPTIMIZATION_SUMMARY.md  CI_WORKFLOW_DEPENDENCIES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  Changelog.python.md  Changelog.rust.md  Justfile  LICENSE  README.md  RELEASE.md  clippy.toml  codecov.yml  compose.yaml  deny.toml  flake.nix  ic2-changes.md  index.html  objects.inv  pixi.toml  pyproject.toml  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml  shell.nix  (+6 more)
docs/: .env.sample  .gitignore  .readthedocs.yaml  README.md  api.rst  conf.py  doc-env.yml  index.md  installation.md  macros.py  mkdocs.yml  pyproject.toml  quickstart.md  requirements.txt
docs/docs/: CNAME  ai-policy.md  async.md  ci-infrastructure.md  concepts.md  configuration.md  contributing.md  faq.md  getting-started.md  howto.md  icechunk-for-git-users.md  icechunk-rust.md  index.md  moving-chunks.md  overview.md  performance.md  quickstart.md  sample-datasets.md  spec.md  storage.md  version-control.md  version-policy.md  virtual.md  xarray.md
docs/overrides/: home.html  main.html
docs/plans/: 2026-02-25-c-api-zarr-store.md  wasm-storage-decoupling.md
docs/stylesheets/: extra.css
icechunk/: Cargo.toml  README.md  default.yaml
icechunk-arrow-object-store/: Cargo.toml
icechunk-arrow-object-store/src/: azure_fast_list.rs  fast_list_test_server.rs  gcs_fast_list.rs  lib.rs
icechunk-c/: Cargo.toml  build.rs  cbindgen.toml
icechunk-c/include/: icechunk.h
icechunk-c/src/: error.rs  ffi.rs  lib.rs  runtime.rs  storage.rs  store.rs
icechunk-c/tests/: smoke_test.c
icechunk-export/: Cargo.toml
icechunk-export/examples/: export.rs  saturate_chunks.rs
icechunk-export/src/: lib.rs
icechunk-format/: Cargo.toml
icechunk-format/flatbuffers/: all.fbs  common.fbs  manifest.fbs  repo.fbs  snapshot.fbs  transaction_log.fbs
icechunk-format/src/: lib.rs  manifest.rs  repo_info.rs  snapshot.rs  strategies.rs  transaction_log.rs
icechunk-fs/: Cargo.toml
icechunk-fs/src/: lib.rs
icechunk-js/: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  browser.js  fetch-storage.d.ts  fetch-storage.js  fetch-storage.mjs  icechunk-js.wasi-browser.js  icechunk-js.wasi.cjs  icechunk.wasi-browser.js  icechunk.wasi.cjs  index.d.ts  index.js  package.json  wasi-worker-browser.mjs
icechunk-js/.cargo/: config.toml
icechunk-js/__test__/: index.spec.ts
icechunk-js/src/: config.rs  errors.rs  lib.rs  repository.rs  session.rs  storage.rs  store.rs
icechunk-macros/: Cargo.toml
icechunk-macros/src/: lib.rs
icechunk-python/: .gitignore  .known-xarray-doc-diffs.json  Cargo.toml  README.md  debug_mypy.py  index.html  index.md  pyproject.toml  stubtest_allowlist.txt
icechunk-python/benchmarks/: README.md  buckets.py  coiled_runner.py  conftest.py  create_era5.py  datasets.py  helpers.py  lib.py  most_recent.sh  run_refs.py  runner.py  setup_benchmarks.py  tasks.py  test_benchmark_reads.py  test_benchmark_writes.py  write.py
icechunk-python/cheatsheets/: index.html
icechunk-python/concurrency/: index.html
icechunk-python/configuration/: index.html
icechunk-python/dask/: dask.md  index.html
icechunk-python/docs/: .env.sample  .gitignore  .readthedocs.yaml  README.md  doc-env.yml  mkdocs.yml
icechunk-python/examples/: bank_accounts.py  compare_early_close.py  dask_write.py  early_close_deadlock.py  era5-virtual.ipynb  from_zarr_xarray_tutorial.py  high_concurrency.py  mpwrite.py  run_in_ci.sh  shift_uneven_regular.py  smoke-test.py
icechunk-python/faq/: index.html
icechunk-python/integration_tests/: test_r2.py
icechunk-python/mypy_coverage/: coverage.json
icechunk-python/mypy_report/: any-exprs.txt  types-of-anys.txt
icechunk-python/notebooks/: Untitled.ipynb  demo-azure-blob.ipynb  demo-azure_blob.ipynb  demo-dummy-data.ipynb  demo-gcp.ipynb  demo-gcs.ipynb  demo-s3.ipynb  environment.yml  era5_xarray.ipynb  expiration.ipynb  memorystore.ipynb  reference.ipynb  version-control.ipynb  xarray-demo.ipynb
icechunk-python/parallel/: index.html
icechunk-python/perf/: array.py  lib.py  tasks.py
icechunk-python/quickstart/: index.html  quickstart.md
icechunk-python/reference/: index.html
icechunk-python/scripts/: check_xarray_docs_sync.py  known-xarray-doc-diffs.json
icechunk-python/src/: asyncio_bridge.rs  config.rs  conflicts.rs  display.rs  errors.rs  export.rs  ingest.rs  lib.rs  obstore.rs  pickle.rs  repository.rs  session.rs  stats.rs  storage.rs  store.rs  streams.rs  sync.rs  sync_api.rs  virtualrefs.rs  zep8.rs
icechunk-python/tests/: _ingest_subprocess_runner.py  conftest.py  run_xarray_backends_tests.py  test_array_chunk_iterator.py  test_can_read_old.py  test_commit_properties.py  test_concurrency.py  test_concurrency_multiprocess.py  test_config.py  test_conflicts.py  test_credentials.py  test_creeping_death.py  test_dask.py  test_dask_array.py  test_debuginfo.py  test_display.py  test_distributed_append.py  test_distributed_writers.py  test_earthdata.py  test_error.py  test_exception_tree.py  test_feature_flags.py  test_filesystem_compat.py  test_format_universality.py  test_gc.py  test_get_many_chunks.py  test_ingest_crash_subprocess.py  test_ingest_hypothesis.py  test_ingest_network.py  test_ingest_ome_zarr_e2e.py  test_ingest_resume.py  test_ingest_smoke.py  test_inspect.py  test_key_layout.py  test_logs.py  test_manifest_sharding.py  test_manifest_splitting.py  test_migration.py  test_move.py  test_pickle.py  (+23 more)
icechunk-python/version-control/: index.html  version-control.md
icechunk-python/virtual/: index.html  virtual.md
icechunk-python/xarray/: index.html  xarray.md
icechunk-s3/: Cargo.toml
icechunk-s3/src/: fast_list.rs  lib.rs
icechunk-storage/: Cargo.toml  tracey-rustdoc-header.html
icechunk-storage/src/: lib.rs  (+4 more)
icechunk-types/: Cargo.toml
version-compat-tests/: .gitignore  README.md  pyproject.toml
(+2862 files in other folders)
