[workspace]
members = ["icechunk", "icechunk-python", "icechunk-macros", "icechunk-js"]
default-members = ["icechunk"]
resolver = "2"

[workspace.lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

[workspace.metadata.release]
allow-branch = ["main", "release-*", "support/v*"]
sign-commit = true
sign-tag = true
push = false


[profile.perf]
inherits = "release"
debug = 1
