[tool.poetry]
name = "icechunk-docs"
description = "Icechunk documentation website"
authors = ["Orestis Herodotou <orestis@earthmover.io>"]
readme = "README.md"

# Disable package mode
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = {extras = ["imaging"], version = "^9.5.39"}
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
mkdocs-jupyter = "^0.25.0"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.9"
mkdocs-git-committers-plugin-2 = "^2.4.1"
mkdocs-macros-plugin = "^1.2.0"
mkdocs-include-markdown-plugin = "^6.2.2"
mkdocs-open-in-new-tab = "^1.0.6"
mkdocs-redirects = "^1.2.1"
mkdocs-breadcrumbs-plugin = "^0.1.10"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-git-authors-plugin = "^0.9.0"
markdown-exec = "^1.10.0"
maturin = "^1.8.2"
xarray = "^2025.1.2"
pooch = "^1.8.2"
scipy = "^1.15.2"
dask = "^2025.2.0"
cftime = "^1.6.4.post1"
distributed = "^2025.2.0"

[tool.poetry.group.dev.dependencies]
mike = "^2.1.3"
shtab = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
