[package]
name = "icechunk-arrow-object-store"
version = "2.1.1"
description = "Apache Arrow object_store storage backend for icechunk"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = true
rust-version.workspace = true

[dependencies]
icechunk-storage.workspace = true
icechunk-types.workspace = true

async-trait.workspace = true
base64 = { workspace = true, optional = true }
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
hmac = { workspace = true, optional = true }
http.workspace = true
memchr = { workspace = true, optional = true }
object_store.workspace = true
percent-encoding = { workspace = true, optional = true }
rand.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
sha2 = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tracing.workspace = true
typetag.workspace = true
url.workspace = true

[dev-dependencies]
icechunk-macros.workspace = true

rmp-serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
test-log.workspace = true

[features]
default = ["s3", "gcs", "azure", "http", "fs"]
s3 = ["object_store/aws"]
gcs = ["object_store/gcp", "dep:memchr", "dep:percent-encoding", "dep:reqwest"]
azure = [
  "object_store/azure",
  "dep:base64",
  "dep:hmac",
  "dep:memchr",
  "dep:percent-encoding",
  "dep:reqwest",
  "dep:sha2",
]
http = ["object_store/http"]
fs = ["object_store/fs"]

[lints]
workspace = true
