[package]
name = "icechunk-export"
version = "0.1.0"

description = "Library to export Icechunk repositories"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition = "2024"

[dependencies]
icechunk = { path = "../icechunk", version = "0.3.8" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
bytes = { version = "1.10.1" }
err-into = "1.0.1"
itertools = "0.14.0"
futures = "0.3.31"
chrono = "0.4.42"
indicatif = "0.18.0"
thiserror = "2.0.16"
tokio-util = { version = "0.7.16", features = ["rt"] }
async-trait = "0.1.89"

[lints]
workspace = true
