[package]
name = "icechunk-format"
version = "2.0.0-alpha.7"
description = "Binary format types and serialization for the Icechunk storage engine"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = true
rust-version.workspace = true

[dependencies]
icechunk-types.workspace = true

base32.workspace = true
bytes.workspace = true
chrono.workspace = true
flatbuffers.workspace = true
flexbuffers.workspace = true
futures.workspace = true
itertools.workspace = true
quick_cache.workspace = true
rand.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
zstd.workspace = true

[dev-dependencies]
icechunk-macros.workspace = true

pretty_assertions.workspace = true
proptest.workspace = true
test-log.workspace = true
test-strategy.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
