[package]
name = "icechunk-macros"
description = "Support and helper macros for the Icechunk library"
version = "2.0.1"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = true
rust-version.workspace = true

[dependencies]
quote.workspace = true
syn.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true
