[package]
name = "icechunk-python"
version = "2.0.0-alpha.4"
description = "Transactional storage engine for Zarr designed for use on cloud object storage"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = false
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_icechunk_python"
crate-type = ["cdylib"]

[dependencies]
icechunk = { path = "../icechunk", version = "2.0.0-alpha.4", features = ["logs"] }

async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = { version = "0.4.44" }
futures = "0.3.32"
itertools = "0.14.0"
miette = { version = "7.6.0", features = ["fancy"] }
pyo3 = { version = "0.27.2", features = [
  "chrono",
  "experimental-async",
  "multiple-pymethods",
] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pyo3-bytes = "0.5.0"
rand = "0.10.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
strsim = "0.11"
thiserror = "2.0.18"
tokio = "1.50"
typetag = "0.2.21"

# Optional dependencies
clap = { version = "4.6", features = ["derive"], optional = true }

[features]
cli = ["clap", "icechunk/cli"]
default = ["cli"]

[lints]
workspace = true
