[package]
name = "icechunk-python"
version = "2.0.0-alpha.5"
description = "Transactional storage engine for Zarr designed for use on cloud object storage"
readme = "README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = false
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_icechunk_python"
crate-type = ["cdylib"]

[dependencies]
icechunk = { workspace = true, features = ["logs"] }

async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
itertools.workspace = true
miette.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
pyo3-bytes.workspace = true
rand.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
tokio.workspace = true
typetag.workspace = true

# Optional dependencies
clap = { workspace = true, optional = true }

[features]
cli = ["clap", "icechunk/cli"]
default = ["cli"]

[lints]
workspace = true
