[package]
name = "icechunk-python"
version = "2.0.4"
description = "Transactional storage engine for Zarr designed for use on cloud object storage"
readme = "README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = false
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_icechunk_python"
crate-type = ["cdylib"]

[dependencies]
icechunk = { workspace = true, features = ["logs"] }
icechunk-arrow-object-store.workspace = true
object_store.workspace = true

async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
itertools.workspace = true
miette.workspace = true
numpy.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
pyo3-bytes.workspace = true
pyo3-object_store = { version = "0.8", default-features = false }
rand.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
tokio.workspace = true
typetag.workspace = true

# Optional dependencies
clap = { workspace = true, optional = true }

[features]
cli = ["clap", "icechunk/cli"]
default = ["cli"]

[package.metadata.cargo-machete]
# `icechunk-arrow-object-store` is used in `src/ingest.rs` via path imports
# (`use icechunk_arrow_object_store::object_store::...`); cargo-machete
# doesn't trace through that and would otherwise flag it as unused.
ignored = ["icechunk-arrow-object-store"]

[lints]
workspace = true
