[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "icechunk"
description = "Icechunk Python"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
readme = "../README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [{ name = "Earthmover", email = "info@earthmover.io" }]

dependencies = ["zarr>=3,!=3.0.3"]

[project.optional-dependencies]
test = [
  "boto3",
  "coverage",
  "mypy",
  "object-store-python",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-xdist",
  "ruff",
  "dask>=2024.11.0",
  "distributed>=2024.11.0",
  "xarray>=2025.01.2",
  "hypothesis",
  "pandas-stubs",
  "boto3-stubs[s3]",
  "termcolor",
  "pooch",
  "netcdf4",
]
benchmark = [
  "pytest-benchmark[histogram]",
  "pytest-xdist",
  "s3fs",
  "gcsfs",
  "h5netcdf",
  "pooch",
  "tqdm",
  "humanize",
  "platformdirs",
  "ipdb",
  "coiled",
]
docs = [
  "scipy",
  "cftime",
  "pooch",
  "dask>=2024.11.0",
  "distributed>=2024.11.0",
  "xarray>=2025.01.2",
  "myst_nb",
  "pydata_sphinx_theme",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-mermaid2-plugin",
  "markdown-exec",
  "mkdocs-breadcrumbs-plugin",
  "mkdocs-minify-plugin",
  "mkdocs-open-in-new-tab",
  "mkdocs",
  "mkdocs-material[imaging]",
  "mkdocstrings[python]",
  "mkdocs-jupyter",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-git-committers-plugin-2",
  "mkdocs-macros-plugin",
  "mkdocs-include-markdown-plugin",
  "mkdocs-redirects",
  "mkdocs-git-authors-plugin",
  "sphinx",
  "sphinx_copybutton",
  "sphinx_design",
  "sphinx_togglebutton",
  "sphinx-autodoc-typehints",
]

[dependency-groups]
upstream = [
  "boto3",
  "coverage",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-xdist",
  "pytest-reportlog",
  "ruff",
  "hypothesis",
  "pandas-stubs",
  "boto3-stubs[s3]",
  "termcolor",
  # "object-store-python @ git+https://github.com/roeap/object-store-python.git", # doesn't work with uv
  "object-store-python",
  "dask @ git+https://github.com/dask/dask.git",
  "distributed @ git+https://github.com/dask/distributed.git",
  "xarray @ git+https://github.com/pydata/xarray.git",
  "zarr @ git+https://github.com/zarr-developers/zarr.git",
]
dev = [
  { include-group = "upstream" }
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "icechunk._icechunk_python"
python-source = "python"
exclude = ["README.md"]

[tool.uv]
# Rebuild package when any Rust files change
cache-keys = [
  {file = "pyproject.toml"},
  {file = "Cargo.toml"},
  {file = "src/**/*.rs"},
  {file = "../icechunk/Cargo.toml"},
  {file = "../icechunk/src/**/*.rs"},
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "7"
testpaths = ["tests", "integration_tests"]
log_cli_level = "INFO"
xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers"]
markers = [
  "gpu", # need this to run the zarr tests
]
filterwarnings = [
  "error",
  "ignore:Jupyter is migrating its paths to use:DeprecationWarning:",
  "ignore:Port 8787 is already in use:UserWarning:",
  # TODO: this is raised for vlen-utf8, vlen-bytes, consolidated metadata, U1 dtype, S1 dtype
  "ignore:The codec `vlen-utf8` is currently not part in the Zarr format 3 specification.",
  "ignore:The codec `vlen-bytes` is currently not part in the Zarr format 3 specification.",
  "ignore:The dtype `<U1` is currently not part in the Zarr format 3 specification.",
  "ignore:The dtype `\\|S1` is currently not part in the Zarr format 3 specification.",
  "ignore:Consolidated metadata is currently not part in the Zarr format 3 specification.",
  "ignore::ResourceWarning",
  "ignore:Unused async fixture loop scope:pytest.PytestWarning",
  "ignore:.*does not have a Zarr V3 specification.*",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["toolz.*"]

[tool.ruff]
line-length = 90
extend-exclude = ["*.ipynb", "doc", "_typed_ops.pyi"]

[tool.ruff.lint]
extend-select = [
  "F",    # Pyflakes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PIE",  # flake8-pie
  "TID",  # flake8-tidy-imports (absolute imports)
  "PGH",  # pygrep-hooks
  "PERF", # Perflint
  "RUF",
]
extend-safe-fixes = [
  "TID252", # absolute imports
]
ignore = [
  "E402",    # module level import not at top of file
  "E501",    # line too long - let the formatter worry about that
  "E731",    # do not assign a lambda expression, use a def
  "UP007",   # use X | Y for type annotations
  "C40",     # unnecessary generator, comprehension, or literal
  "PGH003",  # type:ignore without code
  "PIE790",  # unnecessary pass statement
  "PERF203", # try-except within a loop incurs performance overhead
  "RUF001",  # string contains ambiguous unicode character
  "RUF002",  # docstring contains ambiguous acute accent unicode character
  "RUF003",  # comment contains ambiguous no-break space unicode character
  "RUF005",  # consider unpacking operator instead of concatenation
  "RUF012",  # mutable class attributes
]

[tool.ruff.lint.isort]
known-first-party = ["dask", "distributed", "icechunk", "xarray", "zarr"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[project.scripts]
icechunk = "icechunk._icechunk_python:cli_entrypoint"
